trunk/Archive2/24/f293968c00bce4/output
main.cpp:9:25: error: expected the class name after '~' to name a destructor
        s.std::string::~string();
                        ^
1 error generated.
